# mcp-redis-best-practices

./: .gitignore  LICENSE  MIGRATION_PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: .upstream-last-checked  copilot-instructions.md
.github/workflows/: build.yml  check-upstream.yml  release.yml
docs/: claude-desktop-config.md
extension/: .vscodeignore  CHANGELOG.md  README.md  build.sh  package-lock.json  package.json  tsconfig.json
extension/scripts/: bundle-mcp.js
extension/src/: extension.ts
extension/src/mcp/: knowledge.ts  server.ts  tools.ts  types.ts
extension/src/mcp/knowledge/rules/: _sections.md  cluster-read-replicas.md  conn-pooling.md  conn-timeouts.md  data-key-naming.md  json-vs-hash.md  ram-ttl.md  rqe-index-creation.md  security-acls.md  security-auth.md  semantic-cache-best-practices.md  stream-choosing-pattern.md  vector-rag-pattern.md
mcp-server/: README.md  build.py  pyproject.toml
mcp-server/src/redis_best_practices/: __init__.py  __main__.py  server.py  tools.py
mcp-server/src/redis_best_practices/knowledge/: AGENTS.md  __init__.py
mcp-server/src/redis_best_practices/knowledge/rules/: conn-blocking.md  conn-pipelining.md  data-choose-structure.md  json-partial-updates.md  observe-commands.md  observe-metrics.md
mcp-server/tests/: conftest.py  test_agents.py  test_knowledge.py  test_mcp_integration.py  test_server.py
scripts/: release.sh
visual-studio/: README.md  RedisBestPracticesMCP.csproj  RedisBestPracticesMCP.sln
visual-studio/src/: RedisBestPracticesExtension.cs  SetupCopilotInstructionsCommand.cs  SetupMCPServerCommand.cs  Strings.resx
