[project]
name = "mcp-redis-best-practices"
version = "0.1.0"
description = "MCP server providing Redis development best practices as AI tools"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Thomas Findelkind", email = "tf.git@gmail.com" }
]
keywords = ["mcp", "redis", "best-practices", "ai", "llm", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-redis-best-practices = "redis_best_practices:main"

[project.urls]
Homepage = "https://github.com/tf-gmail/mcp-redis-best-practices"
Repository = "https://github.com/tf-gmail/mcp-redis-best-practices"
Issues = "https://github.com/tf-gmail/mcp-redis-best-practices/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_best_practices"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
